--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">QuizApp</string>
+    <string name="welcome">Welcome</string>
+    <string name="enter_your_name">Please enter your name.</string>
+    <string name="name">Name</string>
+    <string name="start_button">START</string>
 </resources>
